# libgossip

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  README_ZH.md  RELEASE.md  VCPKG_GUIDE.md  VCPKG_README.md  header_config.json  portfile.cmake  requirements-test.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  python_bindings.yml
bindings/python/: CMakeLists.txt  README.md  TESTING.md  __init__.py  advanced_decorator_example.py  debug_example.py  decorator_example.py  example.py  gossip_py.cpp  network_api_example.py  network_example.py  pyproject.toml  requirements-test.txt  setup.py  test_libgossip.py  two_node_example.py
bindings/python/libgossip/: __init__.py
cmake/: CodeCoverage.cmake  FindDependencies.cmake  VersionCheck.cmake  libgossipConfig.cmake.in
examples/: CMakeLists.txt  README.md  REAL_CLUSTER_README.md  advanced_cluster.cpp  better_stats_test.cpp  gossip_manager_example.cpp  large_scale_cluster_example.cpp  net_c_api_example.c  network_example.cpp  real_cluster_example.cpp  redis_cluster_gossip_example.cpp  seed_cluster.cpp  serializer_example.cpp  simple_cluster.cpp  simple_cluster_c.c  simple_cluster_stats.cpp  tcp_transport_example.cpp  transport_factory_example.cpp  udp_transport_example.cpp
include/: libgossip_api.h
include/core/: config.hpp  enum_reflection.inl  gossip_c.h  gossip_config.hpp  gossip_core.h  gossip_core.hpp  gossip_manager.hpp  libgossip_api.h  logger.hpp  message_serializer.hpp  node_id_utils.hpp  version.hpp.in  version_check.hpp
include/net/: gossip_net.h  json_serializer.hpp  serializer_factory.hpp  tcp_transport.hpp  transport_factory.hpp  udp_transport.hpp
script/: format.py  generate_ascii_header.py  generate_coverage.py
scripts/: build_msvc.bat  check_build.bat  compile_test.bat
src/core/: gossip_c.cpp  gossip_core.cpp  gossip_manager.cpp  node_id_utils.cpp
src/net/: gossip_net_c.cpp  json_serializer.cpp  serializer_factory.cpp  tcp_transport.cpp  transport_factory.cpp  udp_transport.cpp
tests/: CMakeLists.txt  c_binding_test.cpp  gossip_core_test.cpp  gossip_manager_test.cpp  node_id_utils_test.cpp  serializer_test.cpp  transport_test.cpp
vcpkg-port/: CONTROL
